add stack trace to post and highlight

--- a/_posts/2011-07-09-Exalead-Cloudview-Search-UI-App-issue-with-IBM-RAD.textile
+++ b/_posts/2011-07-09-Exalead-Cloudview-Search-UI-App-issue-with-IBM-RAD.textile
@@ -13,3 +13,59 @@ When importing the project into my "RAD":http://www-01.ibm.com/software/awdtools
 
 
 The error was raised by from the Websphere's implementation, the fix was include in the Spring 2.5.5 version
+
+{% highlight java linenos %}
+[14/07/11 15:37:36:957 CEST] 00000019 webapp        E com.ibm.ws.webcontainer.webapp.WebApp logError SRVE0293E: [Servlet Error]-[null]: org.springframework.beans.factory.BeanCreationException: Error creating bean with name 'messageSource' defined in ServletContext resource [/WEB-INF/spring-context/applicationContext-config.xml]: Initialization of bean failed; nested exception is java.lang.NullPointerException 
+        at org.springframework.beans.factory.support.AbstractAutowireCapableBeanFactory.doCreateBean(AbstractAutowireCapableBeanFactory.java:478) 
+        at org.springframework.beans.factory.support.AbstractAutowireCapableBeanFactory$1.run(AbstractAutowireCapableBeanFactory.java:409) 
+        at java.security.AccessController.doPrivileged(AccessController.java:224) 
+        at org.springframework.beans.factory.support.AbstractAutowireCapableBeanFactory.createBean(AbstractAutowireCapableBeanFactory.java:380) 
+        at org.springframework.beans.factory.support.AbstractBeanFactory$1.getObject(AbstractBeanFactory.java:264) 
+        at org.springframework.beans.factory.support.DefaultSingletonBeanRegistry.getSingleton(DefaultSingletonBeanRegistry.java:220) 
+        at org.springframework.beans.factory.support.AbstractBeanFactory.doGetBean(AbstractBeanFactory.java:261) 
+        at org.springframework.beans.factory.support.AbstractBeanFactory.getBean(AbstractBeanFactory.java:185) 
+        at org.springframework.beans.factory.support.AbstractBeanFactory.getBean(AbstractBeanFactory.java:168) 
+        at org.springframework.context.support.AbstractApplicationContext.initMessageSource(AbstractApplicationContext.java:628) 
+        at org.springframework.context.support.AbstractApplicationContext.refresh(AbstractApplicationContext.java:369) 
+        at org.springframework.web.context.ContextLoader.createWebApplicationContext(ContextLoader.java:255) 
+        at org.springframework.web.context.ContextLoader.initWebApplicationContext(ContextLoader.java:199) 
+        at org.springframework.web.context.ContextLoaderListener.contextInitialized(ContextLoaderListener.java:45) 
+        at com.ibm.ws.webcontainer.webapp.WebApp.notifyServletContextCreated(WebApp.java:1681) 
+        at com.ibm.ws.webcontainer.webapp.WebApp.commonInitializationFinish(WebApp.java:374) 
+        at com.ibm.ws.webcontainer.webapp.WebAppImpl.initialize(WebAppImpl.java:299) 
+        at com.ibm.ws.webcontainer.webapp.WebGroupImpl.addWebApplication(WebGroupImpl.java:100) 
+        at com.ibm.ws.webcontainer.VirtualHostImpl.addWebApplication(VirtualHostImpl.java:166) 
+        at com.ibm.ws.webcontainer.WSWebContainer.addWebApp(WSWebContainer.java:731) 
+        at com.ibm.ws.webcontainer.WSWebContainer.addWebApplication(WSWebContainer.java:616) 
+        at com.ibm.ws.webcontainer.component.WebContainerImpl.install(WebContainerImpl.java:376) 
+        at com.ibm.ws.webcontainer.component.WebContainerImpl.start(WebContainerImpl.java:668) 
+        at com.ibm.ws.runtime.component.ApplicationMgrImpl.start(ApplicationMgrImpl.java:1122) 
+        at com.ibm.ws.runtime.component.DeployedApplicationImpl.fireDeployedObjectStart(DeployedApplicationImpl.java:1319) 
+        at com.ibm.ws.runtime.component.DeployedModuleImpl.start(DeployedModuleImpl.java:609) 
+        at com.ibm.ws.runtime.component.DeployedApplicationImpl.start(DeployedApplicationImpl.java:944) 
+        at com.ibm.ws.runtime.component.ApplicationMgrImpl.startApplication(ApplicationMgrImpl.java:725) 
+        at com.ibm.ws.runtime.component.ApplicationMgrImpl.start(ApplicationMgrImpl.java:2046) 
+        at com.ibm.ws.runtime.component.CompositionUnitMgrImpl.start(CompositionUnitMgrImpl.java:439) 
+        at com.ibm.ws.runtime.component.CompositionUnitImpl.start(CompositionUnitImpl.java:123) 
+        at com.ibm.ws.runtime.component.CompositionUnitMgrImpl.start(CompositionUnitMgrImpl.java:382) 
+        at com.ibm.ws.runtime.component.CompositionUnitMgrImpl.access$300(CompositionUnitMgrImpl.java:110) 
+        at com.ibm.ws.runtime.component.CompositionUnitMgrImpl$CUInitializer.run(CompositionUnitMgrImpl.java:949) 
+        at com.ibm.wsspi.runtime.component.WsComponentImpl$_AsynchInitializer.run(WsComponentImpl.java:349) 
+        at com.ibm.ws.util.ThreadPool$Worker.run(ThreadPool.java:1563) 
+Caused by: java.lang.NullPointerException 
+        at org.springframework.core.GenericTypeResolver.getTypeVariableMap(GenericTypeResolver.java:144) 
+        at org.springframework.core.GenericTypeResolver.resolveReturnType(GenericTypeResolver.java:93) 
+        at org.springframework.beans.GenericTypeAwarePropertyDescriptor.getPropertyType(GenericTypeAwarePropertyDescriptor.java:58) 
+        at java.beans.PropertyDescriptor.setWriteMethod(PropertyDescriptor.java:111) 
+        at java.beans.PropertyDescriptor.<init>(PropertyDescriptor.java:77) 
+        at org.springframework.beans.GenericTypeAwarePropertyDescriptor.<init>(GenericTypeAwarePropertyDescriptor.java:47) 
+        at org.springframework.beans.CachedIntrospectionResults.<init>(CachedIntrospectionResults.java:250) 
+        at org.springframework.beans.CachedIntrospectionResults.forClass(CachedIntrospectionResults.java:144) 
+        at org.springframework.beans.BeanWrapperImpl.getCachedIntrospectionResults(BeanWrapperImpl.java:252) 
+        at org.springframework.beans.BeanWrapperImpl.convertForProperty(BeanWrapperImpl.java:380) 
+        at org.springframework.beans.factory.support.AbstractAutowireCapableBeanFactory.convertForProperty(AbstractAutowireCapableBeanFactory.java:1287) 
+        at org.springframework.beans.factory.support.AbstractAutowireCapableBeanFactory.applyPropertyValues(AbstractAutowireCapableBeanFactory.java:1248) 
+        at org.springframework.beans.factory.support.AbstractAutowireCapableBeanFactory.populateBean(AbstractAutowireCapableBeanFactory.java:1008) 
+        at org.springframework.beans.factory.support.AbstractAutowireCapableBeanFactory.doCreateBean(AbstractAutowireCapableBeanFactory.java:470) 
+        ... 35 more
+{% endhighlight %}
