--- a/_posts/2011-07-09-Exalead-Cloudview-Search-UI-App-issue-with-IBM-RAD.textile
+++ b/_posts/2011-07-09-Exalead-Cloudview-Search-UI-App-issue-with-IBM-RAD.textile
@@ -16,9 +16,9 @@ NullPointerException at org.springframework.core.GenericTypeResolver.getTypeVari
 
 h3. The Cause
 
-As explained by Juergen Hoeller at "NPE in GenericTypeResolver when...":https://jira.springsource.org/browse/SPR-4788
+Spring 2.4.4 as problem running with RAD, as explained by Juergen Hoeller at "NPE in GenericTypeResolver when...":https://jira.springsource.org/browse/SPR-4788 
 
-bq. This seems to be caused by a slightly different implementation of the "java.beans.PropertyDescriptor" class in IBM's JDK class libraries... breaking an assumption in Spring's GenericTypeAwarePropertyDescriptor subclass...
+bq. This seems to be caused by a slightly different implementation of the "java.beans.PropertyDescriptor" class in IBM's JDK class libraries... breaking an assumption in Spring's GenericTypeAwarePropertyDescriptor subclass... ??Juergen Hoeller, "Co-founder of the Spring Framework":http://www.springsource.com/people/jhoeller?? 
 
 h3. The Solution
 
