--- a/_posts/2011-07-27-Exalead-Cloudview-Search-UI-App-Xpath_Issue_on_Result_Page.textile
+++ b/_posts/2011-07-27-Exalead-Cloudview-Search-UI-App-Xpath_Issue_on_Result_Page.textile
@@ -1,16 +1,15 @@
 ---
 layout: post
-title: Exalead Cloudview Search UI App Xpath parsing Issue on Result Page
+title: Exalead Cloudview Search UI App Xpath Parsing Issue on Result Page
 author: Denis Jacquemin
-published: false
+published: true
 ---
 
 "Exalead Cloudview":http://www.exalead.com/software/products/cloudview/ 5.1 is delivered with an "Eclipse":http://www.eclipse.org/ project for the Search UI Application Interface, this application is build on "Spring":http://www.springsource.org/ 2.4.4.
 
 h3. The Problem
 
-When requesting the page http://host:port/search-ui-framework/search/C.view=CloudView-50/results?q=test I got the following error (see the full stack trace at the end of the post):
-
+When requesting the result page after a search (http://host:port/search-ui-framework/search/C.view=CloudView-50/results?q=test) I got the following error (see the full stack trace at the end of the post):
 
 {% highlight java %}
 Error evaluating XPath expression "string($answer/Answer/@context)": javax.xml.transform.TransformerException: Unknown error in XPath. 
@@ -23,8 +22,6 @@ The following line of code in WEB-INF\views\jsp\search\results.jsp is raising th
 {% highlight java %}
 <x:set var="searchContext" select="string($answer/Answer/@context)"/>
 {% endhighlight %}
-
-bq. This seems to be caused by a slightly different implementation of the "java.beans.PropertyDescriptor" class in IBM's JDK class libraries... breaking an assumption in Spring's GenericTypeAwarePropertyDescriptor subclass... ??Juergen Hoeller, "Co-founder of the Spring Framework":http://www.springsource.com/people/jhoeller?? 
 
 h3. The Solution
 
