--- a/_posts/2011-08-9-Custom-Layout-Rails-Generator.textile
+++ b/_posts/2011-08-9-Custom-Layout-Rails-Generator.textile
@@ -23,10 +23,9 @@ The page skeleton uses latest HTML5 goodies
         <div id="maincol">...
         <div id="subcol">...
     </div>
-    <footer></footer    
+    <footer></footer>    
 </body>
 {% endhighlight %}
-
 
 h3. Installation
 
