adding some details

--- a/_posts/2011-08-9-Custom-Layout-Rails-Generator.textile
+++ b/_posts/2011-08-9-Custom-Layout-Rails-Generator.textile
@@ -9,13 +9,12 @@ That's why I put my layout (application.rb, css, images) in a generator.
   
 h3. What it looks like
 
-It's obviously inpired by applications like "Basecamp":http://basecamphq.com/ or "Lighthouse":http://lighthouseapp.com/, the code is as clean as possible and minimalist.
+It's a web application template obviously inspired by applications like "Basecamp":http://basecamphq.com/ or "Lighthouse":http://lighthouseapp.com/, the code is as clean as possible and minimalist.
 !/images/custom_layout_small.png!
 
 h3. Installation
 
-Rails 3
-Add the gem to your Gemfile.
+This generator is packaged as a "ruby gem":https://rubygems.org/gems/custom_layout, add it to your Gemfile.
 
 {% highlight ruby %}
 gem "custom_layout", :group => :development
@@ -29,7 +28,7 @@ rails g custom_layout
 
 h3. Features
 
-* Google Analytics code, don't forget to use your site's ID.
+* Includes Google Analytics code, don't forget to use your site's ID.
 * Includes "html5shim":http://code.google.com/p/html5shim/ for enabling HTML5 tags in IExplorer prior to version 9.
 * Liquid layout with minimum width of 960px.
 * JavaScript placed at the end of the page, for loading time optimization.
@@ -50,5 +49,7 @@ The page skeleton uses latest HTML5 goodies
 </body>
 {% endhighlight %}
 
+h3. Feel free to fork it
 
+* "Custom layout Generator on github":https://github.com/denisjacquemin/custom_layout_generator
 
