--- a/_posts/2011-08-9-Custom-Layout-Rails-Generator.textile
+++ b/_posts/2011-08-9-Custom-Layout-Rails-Generator.textile
@@ -22,7 +22,7 @@ gem "custom_layout", :group => :development
 
 Then you can run the generator.
 
-{% highlight ruby %}
+{% highlight rails %}
 rails g custom_layout
 {% endhighlight %}
 
